--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="sign-up">
-                    <p>Don't have an account? <a href="">Sign up</a></p>
+                    <p>Don't have an account? <a href="#">Sign up</a></p>
                 </div>
             </form>
         </div>
