Fix sign up button

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 
             </form>
         </div>
-        <div class="sign-up">
-            <p>Don't have an account? <a href="#">Sign up</a></p>
+        <div class="sign-up-button">
+            <p>Don't have an account?<button class="sign-up">Sign up</button></p>
+            
         </div>
     </main>
 </body>
