--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon.png">
-    <title>TheoJJF Sign in</title>
+    <title>TheoJJF</title>
 </head>
 <body>
+    <nav>
+
+    </nav>
+
     <main>
         <div class="inputs">
             <form action="">
