Change buttons tags

--- a/index.html
+++ b/index.html
@@ -31,18 +31,20 @@
                 </div>
                 
                 <div class="forget-button">
-                    <button class="forget" type="reset">Forgot Password?</button>
+                    <a href="#" class="forget">Forgot Password?</a>
                 </div>
 
 
                 <div class="sign-in-button">
-                    <button class="sign-in" type="submit">Sign in</button>
+                    <a href="#" class="sign-in">Sign in</a>
                 </div>
 
             </form>
         </div>
         <div class="sign-up-button">
-            <p>Don't have an account?<button class="sign-up" type="submit">Sign up</button></p>
+            <p>Don't have an account?
+                <a href="#" class="sign-up">Sign up</a>
+            </p>
         </div>
     </main>
 </body>
