Add additional login separator

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     <a href="#" class="sign-in">Sign in</a>
                 </div>
 
+                <div class="other-login-separator">or</div>
+
+                
             </form>
         </div>
         <div class="sign-up-button">
