Add option separator

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="#" class="sign-in">Sign in</a>
                 </div>
 
-                
+                <div class="other-login-separator">Or sign in with</div>  
             </form>
         </div>
         <div class="sign-up-button">
