Update Sign-in button, modified CSS properties

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
                 <div class="sign-in-button">
-                    <a href="#" class="sign-in">Sign in</a>
+                    <button type="submit" class="sign-in">Sign in</button>
                 </div>
 
                 <div class="other-login-separator">Or sign in with</div>  
