Change class name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div class="inputs">
+        <div class="entries">
             <form action="">
                 <h2>Sign in</h2>
                 <p>Welcome back!</p>
